<resources>
    <string name="app_name">Tareas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_adir_tarea">Añadir Tarea</string>
    <string name="ver_tareas">Ver tareas</string>
    <string name="a_adir">Añadir</string>
    <string name="tarea">Tarea</string>
    <string name="listar">Listar</string>
    <string name="iniciar">Iniciar</string>
    <string name="esta_app_te_ayudara_a_nunca_olvidarte_de_las_tareas_que_debes_hacer_a_lo_largo_del_dia">Esta app te ayudara a nunca olvidarte de las tareas que debes hacer a lo largo del dia.</string>
    <string name="pudes_a_adir_y_elimnar_tareas_segun_vayan_surgiendo_a_lo_largo_del_dia">Pudes añadir y elimnar tareas segun vayan surgiendo a lo largo del dia.</string>
    <string name="todo">TODO</string>
    <string name="ayuda">Ayuda</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="eliminar">Eliminar</string>
    <string name="enviar_al_correo">Enviar al correo</string>
    <string name="enviar_por">Enviar por...</string>
    <string name="partners">Partners</string>
    <string name="string_lista_de_partners" />
    <string name="lista_de_partners">Lista de partners</string>
</resources>